--- a/css/color.css
+++ b/css/color.css
@@ -8,7 +8,7 @@ Theme Color All Codes Variable
 	 --theme-primary-color: #17c788;  /* theme primary color ok*/
 }
 :root {
-	 --theme-secondary-color: #0d1432;  /* theme secondary color ok*/
+	 --theme-secondary-color: #515c4b;  /* theme secondary color ok*/
 }
 :root {
 	 --theme-white-color: #fff;  /* theme white font color ok*/
