--- a/css/style.css
+++ b/css/style.css
@@ -232,37 +232,37 @@ label.radios {
 	background-color: #17c788
 }
 .color-box li.default:before {
-	background: #0d1432;
+	background: #515c4b;
 }
 .color-box li.color_2 {
 	background-color: #3851ff
 }
 .color-box li.color_2:before {
-	background: #0d1432;
+	background: #515c4b;
 }
 .color-box li.color_3 {
 	background-color: #21c743
 }
 .color-box li.color_3:before {
-	background: #0d1432;
+	background: #515c4b;
 }
 .color-box li.color_4 {
 	background-color: #f34f4c
 }
 .color-box li.color_4:before {
-	background: #0d1432;
+	background: #515c4b;
 }
 .color-box li.color_5 {
 	background-color: #42A5F5
 }
 .color-box li.color_5:before {
-	background: #0d1432;
+	background: #515c4b;
 }
 .color-box li.color_6 {
 	background-color: #f1c643
 }
 .color-box li.color_6:before {
-	background: #0d1432;
+	background: #515c4b;
 }
 /*====================================================================
 3. Default Background css
